add button to delete devs

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>Near Dev - Mural de Desenvolvedores </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Um website que exibe usuários e suas Stacks</noscript>
     <div id="root"></div>
   </body>
 </html>
